#2 add more locale keys

--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -86,6 +86,34 @@
   "ubercord.friend.discord_friends.remove.confirm": "Are you sure you want to remove %s as BOTH Discord AND in-game friends?",
   "ubercord.friend.confirm": "[Yes, I'm sure]",
   "ubercord.config.client.title": "Client Config",
+  "ubercord.config.client.category": "Client Config",
+  "ubercord.config.client.category.client_id": "Discord Application ID",
+  "ubercord.config.client.title_display": "Title screen display settings",
+  "ubercord.config.display_mode.name": "Display mode",
+  "ubercord.config.display_mode.type": "Presence type",
+  "ubercord.config.display_mode.type.playing": "Playing",
+  "ubercord.config.display_mode.type.streaming": "Streaming",
+  "ubercord.config.display_mode.type.listening": "Listening",
+  "ubercord.config.display_mode.type.watching": "Watching",
+  "ubercord.config.display_mode.type.custom_status": "Custom status",
+  "ubercord.config.display_mode.type.competing": "Competing",
+  "ubercord.config.display_mode.type.hang_status": "Hang status",
+  "ubercord.config.display_mode.state": "State",
+  "ubercord.config.display_mode.details": "Details",
+  "ubercord.config.display_mode.assets": "Assets",
+  "ubercord.config.display_mode.assets.large": "Large image",
+  "ubercord.config.display_mode.assets.large.image": "Image",
+  "ubercord.config.display_mode.assets.large.text": "Text",
+  "ubercord.config.display_mode.assets.small": "Small image",
+  "ubercord.config.display_mode.assets.small.image": "Image",
+  "ubercord.config.display_mode.assets.small.text": "Text",
+  "ubercord.config.display_config": "Display Config",
+  "ubercord.config.display_config.idle": "When idle",
+  "ubercord.config.display_config.singleplayer": "When playing singleplayer",
+  "ubercord.config.display_config.multiplayer": "When playing multiplayer",
+  "ubercord.config.display_config.realms": "When playing realms",
+  "ubercord.config.display_config.dimension_names": "Dimension Names",
+  "ubercord.config.map_must_contain_equals_error": "Error: this value must contain an equals sign (e.g. minecraft:overworld=Overworld)",
   "ubercord.invite.error": "Failed to send invite: %s",
   "ubercord.invite.success": "Sent invite successfully",
   "ubercord.invite.new": "You've been invited by %s to join their game!",
@@ -97,5 +125,11 @@
   "ubercord.invite.screen.ignore": "Ignore",
   "ubercord.invite.screen.accept": "Accept",
   "ubercord.invite.screen.join_request": "Join request",
-  "ubercord.invite.screen.joiner": "%s would like to join your game."
+  "ubercord.invite.screen.joiner": "%s would like to join your game.",
+  "ubercord.link.no_channel_selected_error": "You must first select a channel with /channel <name> before you can use /link.",
+  "ubercord.generic.error": "error! %s",
+  "ubercord.lobby.not_found_error": "error! Lobby not found!",
+  "ubercord.friend.request.failed.exception": "Failed to send friend request to %s; exception: %s",
+  "ubercord.friend.request.failed.error": "Failed to send friend request to %s: %s",
+  "ubercord.friend.request.successful": "Sent friend request to %s"
 }
