--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "ubercord.system": "system",
-  "ubercord.disclosure.message_data": "Any messages you send here are also sent to Discord. They may be seen or moderated by people who aren't in-game, especially if there is a channel linked.",
+  "ubercord.disclosure.message_data": "Any messages you send here are also sent to Discord. They may be seen or moderated by people who aren't in-game, especially if there is a channel linked.\n\nBy default, DMs are shown in-game. If you do not wish for this to happen (e.g. you are streaming), run /chatctl and tell Discord not to show all DMs in-game.",
   "ubercord.disclosure.edited": "(edited)",
   "ubercord.disclosure.edited.desc": "This message has been edited.",
   "ubercord.disclosure.deleted": "(deleted)",
@@ -10,9 +10,13 @@
   "ubercord.auth.discord.begin": "Authorizing using your Discord account",
   "ubercord.auth.discord.failed_token": "Failed to exchange SDK token from Discord: %s",
   "ubercord.auth.discord.failed_auth": "Failed to authorize with the Discord app: %s",
+  "ubercord.auth.provisional.not_supported": "Using provisional accounts require the server to have Ubercord installed, but it does not seem to be working",
   "ubercord.auth.provisional.begin": "Starting provisional flow",
   "ubercord.auth.provisional.got_token": "Server sorted out a token",
+  "ubercord.auth.provisional.failed_server": "The server either failed to authorize with the provisional service or has not been set up to support provisional accounts. Use a full Discord account or ask your server administrator to register for provisional access.",
+  "ubercord.auth.provisional.failed_offline": "Provisional accounts are not supported for offline mode servers or singleplayer",
   "ubercord.auth.provisional.failed_throwable": "Failed to authorize with the provisional service: %s",
+  "ubercord.auth.provisional.failed_http": "Failed to authorize with the provisional service: HTTP %d",
   "ubercord.auth.provisional.failed_token": "Failed to exchange SDK token from Discord: %s",
   "ubercord.auth.provisional.offline_mode_unsupported": "Your client is in offline mode, which is not supported by the provisional flow. Connect to the internet and restart the game or use the Discord flow.",
   "ubercord.auth.authorization_successful": "Authorization successful!",
@@ -144,5 +148,6 @@
   "ubercord.chat.you": "you",
   "ubercord.server.link_start": "Ensuring the needed permissions are set for linking...",
   "ubercord.server.no_bot_token": "The server must have a bot token to perform this action (e.g. it cannot be done with the default Ubercord app)",
-  "ubercord.server.http_error": "HTTP error! %d %s"
+  "ubercord.server.http_error": "HTTP error! %d %s",
+  "ubercord.discord.connected_game_settings.failed": "Failed to open connected game settings in Discord, could you be using a provisional account?"
 }
