update provisional flow to support server-less auth

--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -12,9 +12,7 @@
   "ubercord.auth.discord.failed_auth": "Failed to authorize with the Discord app: %s",
   "ubercord.auth.provisional.not_supported": "Using provisional accounts require the server to have Ubercord installed, but it does not seem to be working",
   "ubercord.auth.provisional.begin": "Starting provisional flow",
-  "ubercord.auth.provisional.got_token": "Server sorted out a token",
-  "ubercord.auth.provisional.failed_server": "The server either failed to authorize with the provisional service or has not been set up to support provisional accounts. Use a full Discord account or ask your server administrator to register for provisional access.",
-  "ubercord.auth.provisional.failed_offline": "Provisional accounts are not supported for offline mode servers or singleplayer",
+  "ubercord.auth.provisional.got_token": "Provisional service sorted things out",
   "ubercord.auth.provisional.failed_throwable": "Failed to authorize with the provisional service: %s",
   "ubercord.auth.provisional.failed_http": "Failed to authorize with the provisional service: HTTP %d",
   "ubercord.auth.provisional.failed_token": "Failed to exchange SDK token from Discord: %s",
