#12 add initial disclaimer

--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -13,6 +13,10 @@
   "ubercord.auth.discord.failed_auth": "Failed to authorize with the Discord app: %s",
   "ubercord.auth.provisional.not_supported": "Using provisional accounts require the server to have Ubercord installed, but it does not seem to be working",
   "ubercord.auth.provisional.begin": "Starting provisional flow",
+  "ubercord.auth.provisional.disclaimer": "This button uses an external service run by the developer(s) of Übercord to confirm that you are who you say you are. We'll send your UUID, username, and your public key to our servers for this purpose.\n\nThis service is not affiliated with either Mojang or Discord and may be discontinued at the Übercord developers' discretion.",
+  "ubercord.auth.provisional.disclaimer.privacy": "Privacy policy: ",
+  "ubercord.auth.provisional.disclaimer.accept": "[I accept, use my Minecraft username dammit!]",
+  "ubercord.auth.provisional.disclaimer.decline": "[On second thought, just use a Discord account]",
   "ubercord.auth.provisional.got_token": "Provisional service sorted things out",
   "ubercord.auth.provisional.failed_throwable": "Failed to authorize with the provisional service: %s",
   "ubercord.auth.provisional.failed_http": "Failed to authorize with the provisional service: HTTP %d",
