--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -144,6 +144,8 @@
   "ubercord.generic.joining_global_warning": "Not connected to a supported server, joining global channel instead",
   "ubercord.generic.error": "error! %s",
   "ubercord.lobby.not_found_error": "error! Lobby not found!",
+  "ubercord.lobby.failure": "error! Failed to join lobby.",
+  "ubercord.lobby.provisional_service_failed": "error! Something went wrong and your client could not authenticate with the managed channel service.",
   "ubercord.friend.request.failed.exception": "Failed to send friend request to %s; exception: %s",
   "ubercord.friend.request.failed.error": "Failed to send friend request to %s: %s",
   "ubercord.friend.request.successful": "Sent friend request to %s",
