--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -146,6 +146,12 @@
   "ubercord.lobby.not_found_error": "error! Lobby not found!",
   "ubercord.lobby.failure": "error! Failed to join lobby.",
   "ubercord.lobby.provisional_service_failed": "error! Something went wrong and your client could not authenticate with the managed channel service.",
+  "ubercord.lobby.status.resolving": "(resolving name...)",
+  "ubercord.lobby.status.authorizing": "(authorizing...)",
+  "ubercord.lobby.status.waiting_for_server": "(waiting for server...)",
+  "ubercord.lobby.status.joining": "(joining directly...)",
+  "ubercord.lobby.joining": "Joining channel %s",
+  "ubercord.lobby.leaving": "Leaving channel %s",
   "ubercord.friend.request.failed.exception": "Failed to send friend request to %s; exception: %s",
   "ubercord.friend.request.failed.error": "Failed to send friend request to %s: %s",
   "ubercord.friend.request.successful": "Sent friend request to %s",
