--- a/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
+++ b/mod/common/src/main/resources/assets/ubercord/lang/en_us.json
@@ -9,10 +9,12 @@
   "ubercord.party.join": "Joined channel %s",
   "ubercord.party.leave": "Left channel %s",
   "ubercord.auth.discord.begin": "Authorizing using your Discord account",
+  "ubercord.auth.discord.status": "Logging in...",
   "ubercord.auth.discord.failed_token": "Failed to exchange SDK token from Discord: %s",
   "ubercord.auth.discord.failed_auth": "Failed to authorize with the Discord app: %s",
   "ubercord.auth.provisional.not_supported": "Using provisional accounts require the server to have Ubercord installed, but it does not seem to be working",
   "ubercord.auth.provisional.begin": "Starting provisional flow",
+  "ubercord.auth.provisional.status": "Authorizing...",
   "ubercord.auth.provisional.disclaimer": "This button uses an external service run by the developer(s) of Übercord to confirm that you are who you say you are. We'll send your UUID, username, and your public key to our servers for this purpose.\n\nThis service is not affiliated with either Mojang or Discord and may be discontinued at the Übercord developers' discretion.",
   "ubercord.auth.provisional.disclaimer.privacy": "Privacy policy: ",
   "ubercord.auth.provisional.disclaimer.accept": "[I accept, use my Minecraft username dammit!]",
@@ -150,6 +152,19 @@
   "ubercord.lobby.status.authorizing": "(authorizing...)",
   "ubercord.lobby.status.waiting_for_server": "(waiting for server...)",
   "ubercord.lobby.status.joining": "(joining directly...)",
+  "ubercord.auth.discord.authorizing": "(authorizing; check your client!...)",
+  "ubercord.auth.discord.poking_discord": "(poking discord...)",
+  "ubercord.auth.provisional.authorizing": "(started...)",
+  "ubercord.auth.provisional.poking_discord": "(poking discord...)",
+  "ubercord.auth.common.authorized": "(connecting...)",
+  "ubercord.auth.common.done": "Ubercord is connected",
+  "ubercord.status_await_screen": "Waiting...",
+  "ubercord.auth.screen": "Übercord login",
+  "ubercord.auth.screen.info": "Please select an option below to use Übercord.\n\nIf you select \"Use my Minecraft name\", a provisional account will be created specifically for this game.\n\nIf you select \"Don't\", you will not be able to use Übercord, but you will still be able to use server chat if the server allows it. Rich presence will not work with this option.\n\nProvisional accounts are powered by the Übercord Provisional Service, which is run by the developer(s) of Übercord.",
+  "ubercord.auth.screen.discord": "Login with Discord",
+  "ubercord.auth.screen.provisional": "Use my Minecraft name",
+  "ubercord.auth.screen.none": "Don't",
+  "ubercord.auth.common.do_in_background": "Do this in the background",
   "ubercord.lobby.joining": "Joining channel %s",
   "ubercord.lobby.leaving": "Leaving channel %s",
   "ubercord.friend.request.failed.exception": "Failed to send friend request to %s; exception: %s",
